styles first commit

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Jogo Virtual do Bicho</title>
 
-    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/291/291986.png">
+    <link rel="shortcut icon" href="/static/images/favicon.svg">
     <style>
         input[type=checkbox][id^="classico"].css-checkbox {
             display: none;
