--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         </svg>
     </div>
     <div class="row">
-        <div id="lotteries" class="lotteries col-md-9">
+        <div id="lotteries" class="lotteries col-md-10 text-center">
         </div>
         <div class="col-md-2">
             <div class="position-fixed">
@@ -96,10 +96,6 @@
 
  input[type=checkbox][id^="classico"].css-checkbox {
      display: none;
- }
-
- .lotteries {
-     text-align: justify;
  }
 
  .position-fixed {
